--- a/src/app/pages/grafica1/grafica1.component.html
+++ b/src/app/pages/grafica1/grafica1.component.html
@@ -1,1 +1,16 @@
-<p>grafica1 works!</p>
+<div class="row">
+    <div class="col-6">
+        <app-dona Title="Sales" [labels]="labels1" [data]="data1" [colors]="colors1"></app-dona>
+    </div>
+    <div class="col-6">
+        <app-dona Title="Download" [labels]="labels2" [data]="data2"></app-dona>
+    </div>
+</div>
+<div class="row">
+    <div class="col-6">
+        <app-dona Title="Store Sales" [labels]="labels3" [data]="data3"></app-dona>
+    </div>
+    <div class="col-6">
+        <app-dona Title="Mail Orders" [labels]="labels4" [data]="data4"></app-dona>
+    </div>
+</div>
