--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -24,8 +24,7 @@
           <!-- ============================================================== -->
           <!-- Rutas -->
           <!-- ============================================================== -->
-  
-  
+          <router-outlet></router-outlet>
           <!-- ============================================================== -->
           <!-- End Rutas -->
           <!-- ============================================================== -->
@@ -35,15 +34,15 @@
           <!-- ============================================================== -->
           <!-- Start Page Content -->
           <!-- ============================================================== -->
-          <div class="row">
+          <!-- <div class="row">
             <div class="col-12">
                 <div class="card">
                     <div class="card-body">
-                        <router-outlet></router-outlet>
+                       
                     </div>
                 </div>
             </div>
-          </div>
+          </div> -->
           <!-- ============================================================== -->
           <!-- End Page Content -->
           <!-- ============================================================== -->
